Add a bunch of generically useful macros
This is largely based on gmacros.h from glib with a few
custom macros that were repeated in the spice codebase.

--- a/spice/Makefile.am
+++ b/spice/Makefile.am
@@ -9,6 +9,7 @@ spice_protocol_include_HEADERS=		\
 	error_codes.h	\
 	ipc_ring.h	\
 	protocol.h	\
+	macros.h	\
 	qxl_dev.h	\
 	start-packed.h	\
 	stats.h		\
