Move all enums and flags to generated header file

--- a/spice/Makefile.am
+++ b/spice/Makefile.am
@@ -6,6 +6,7 @@ spice_protocol_include_HEADERS=		\
 	barrier.h	\
 	draw.h		\
 	end-packed.h	\
+	enums.h	\
 	error_codes.h	\
 	ipc_ring.h	\
 	protocol.h	\
