Add controller protocol

--- a/spice/Makefile.am
+++ b/spice/Makefile.am
@@ -4,6 +4,7 @@ spice_protocol_includedir=$(includedir)/spice-1/spice
 
 spice_protocol_include_HEADERS=		\
 	barrier.h	\
+	controller_prot.h	\
 	end-packed.h	\
 	enums.h	\
 	error_codes.h	\
