build-sys: Make sure new files are dist'ed
The just added .proto files and python code generation code need to be
added to EXTRA_DIST in order to be distributed in tarballs, and
we need to recurse in the new python_modules directory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,14 @@
 NULL =
-SUBDIRS = spice
+SUBDIRS = python_modules spice
+
+codegendir = $(libdir)/spice-protocol
+dist_codegen_DATA =			\
+	spice_codegen.py		\
+	spice.proto			\
+	spice1.proto			\
+	$(NULL)
+
+DISTCLEANFILES = *.pyc
 
 pkgconfigdir = $(datadir)/pkgconfig
 pkgconfig_DATA = spice-protocol.pc
