--- a/python_modules/Makefile.am
+++ b/python_modules/Makefile.am
@@ -1,15 +1,14 @@
 NULL =
 
-PYTHON_MODULES =				\
-	__init__.py				\
-	codegen.py				\
-	demarshal.py				\
-	marshal.py				\
-	ptypes.py				\
-	spice_parser.py				\
+python_codegendir = $(libdir)/spice-protocol/python_modules
+dist_python_codegen_DATA =		\
+	__init__.py			\
+	codegen.py			\
+	demarshal.py			\
+	marshal.py			\
+	ptypes.py			\
+	spice_parser.py			\
 	$(NULL)
-
-EXTRA_DIST = $(PYTHON_MODULES)
 
 DISTCLEANFILES = *.pyc
 
