build-sys: Make installed spice_codegen.py is executable
Files listed as _DATA in Makefile.am are installed without the
executable bit set, files listed as _SCRIPT do get the executable bit
set. As spice_codegen.py is meant to be run by spice-protocol users,
make sure this bit is set.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,9 +4,12 @@ SUBDIRS = python_modules spice
 
 codegendir = $(libdir)/spice-protocol
 dist_codegen_DATA =			\
-	spice_codegen.py		\
 	spice.proto			\
 	spice1.proto			\
+	$(NULL)
+
+dist_codegen_SCRIPTS =			\
+	spice_codegen.py		\
 	$(NULL)
 
 DISTCLEANFILES = *.pyc
