--- a/spice-protocol.pc.in
+++ b/spice-protocol.pc.in
@@ -1,7 +1,7 @@
 prefix=@prefix@
-exec_prefix=@exec_prefix@
 includedir=@includedir@
-codegendir=@libdir@/spice-protocol
+datadir=${prefix}/share
+codegendir=${datadir}/spice-protocol
 
 Name: spice-protocol
 Description: SPICE protocol headers
